// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPortal renders 1`] = `
<body>
  <div />
  <div
    data-euiportal="true"
  >
    Content
  </div>
</body>
`;

exports[`EuiPortal renders portals with a different theme provider from the global theme with the correct base color 1`] = `
<body>
  <div>
    <span
      class="euiThemeProvider emotion-euiColorMode-inverse-colorClassName"
    />
  </div>
  <div
    class="emotion-euiColorMode-inverse-colorClassName"
    data-euiportal="true"
  >
    Content
  </div>
</body>
`;
